--- a/Projects.html
+++ b/Projects.html
@@ -10,7 +10,7 @@
             <nav>
                 <ul>
                   <li><a href="About.html">About</a></li>
-                  <li><a href="Project.html">Projects</a></li>
+                  <li><a href="Projects.html">Projects</a></li>
                   <li><a href="ContactMe.html">Contact Me</a></li>
                 </ul>
             </nav>
