--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     </head>
     <body>
         <header>
-            <h1><a href="index.html">Coxn1446's Site</a></h1>
             <nav>
                 <ul>
-                  <li><a href="About.html">About</a></li>
-                  <li><a href="Project.html">Projects</a></li>
+                  <li class ="homeNavigation"><a href="index.html">Home</a></li>
                   <li><a href="ContactMe.html">Contact Me</a></li>
+                  <li><a href="Projects.html">Projects</a></li>
+                  <li><a href="About.html">About</a></li>
                 </ul>
             </nav>
         </header>
+        <section class = "homepageHeroImage">
+
+        </section>
         
     </body>
     <footer>
