Added Mixed Messages, organized files

--- a/HTML/About.html
+++ b/HTML/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Coxn1446's Site</title>
+        <title>About Coxn1446's Site</title>
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
@@ -15,10 +15,6 @@
                 </ul>
             </nav>
         </header>
-        <h1><a href="MixedMessages.html">Mixed Messages</a></h1>
-        <p>
-            This is my first Javascript project. I have used basic HTML forms to create an interactive Mad Lib.
-        </p>
         
     </body>
     <footer>
