--- a/HTML/ContactMe.html
+++ b/HTML/ContactMe.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Coxn1446's Site</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Contact Me</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <header>
