--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Coxn1446's Site</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Coxn1446's Projects</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <header>
@@ -15,14 +15,10 @@
                 </ul>
             </nav>
         </header>
-        <section class = "homepageHeroImage">
-            <div class = "homepageQuote">
-                <p class = "homepageQuoteText">
-                   "With a payoff of something like 100 million to 1! Even if the odds of succeeding to this degree are slim are they really 100 million to one against? Something to think about..." 
-                </p>
-            </div>
-
-        </section>
+        <h1><a href="MixedMessages.html">Mixed Messages</a></h1>
+        <p>
+            This is my first Javascript project. I have used basic HTML forms to create an interactive Mad Lib.
+        </p>
         
     </body>
     <footer>
