--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Coxn1446's Site</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <header>
@@ -15,6 +15,14 @@
                 </ul>
             </nav>
         </header>
+        <section class = "homepageHeroImage">
+            <div class = "homepageQuote">
+                <p class = "homepageQuoteText">
+                   "With a payoff of something like 100 million to 1! Even if the odds of succeeding to this degree are slim are they really 100 million to one against? Something to think about..." 
+                </p>
+            </div>
+
+        </section>
         
     </body>
     <footer>
