--- a/HTML/ContactMe.html
+++ b/HTML/ContactMe.html
@@ -8,14 +8,13 @@
         <header>
             <nav>
                 <ul>
-                  <li class ="homeNavigation"><a href="index.html">Home</a></li>
-                  <li><a href="ContactMe.html">Contact Me</a></li>
-                  <li><a href="Projects.html">Projects</a></li>
-                  <li><a href="About.html">About</a></li>
-                </ul>
+                    <li class ="homeNavigation"><a href="../index.html">Home</a></li>
+                    <li><a href="ContactMe.html">Contact Me</a></li>
+                    <li><a href="Projects.html">Projects</a></li>
+                    <li><a href="About.html">About</a></li>
+                  </ul>
             </nav>
         </header>
-        
     </body>
     <footer>
 
