--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <nav>
                 <ul>
                   <li class ="homeNavigation"><a href="index.html">Home</a></li>
-                  <li><a href="ContactMe.html">Contact Me</a></li>
-                  <li><a href="Projects.html">Projects</a></li>
-                  <li><a href="About.html">About</a></li>
+                  <li><a href="HTML/ContactMe.html">Contact Me</a></li>
+                  <li><a href="HTML/Projects.html">Projects</a></li>
+                  <li><a href="HTML/About.html">About</a></li>
                 </ul>
             </nav>
         </header>
