--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul>
-                  <li class ="homeNavigation"><a href="index.html">Home</a></li>
+                  <li class ="homeNavigation"><a href="../index.html">Home</a></li>
                   <li><a href="ContactMe.html">Contact Me</a></li>
                   <li><a href="Projects.html">Projects</a></li>
                   <li><a href="About.html">About</a></li>
