--- a/HTML/MixedMessages.html
+++ b/HTML/MixedMessages.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Mixed Messages</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../CSS/style.css">
         <script type="text/javascript" src=></script>
     </head>
     <body>
