--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Coxn1446's Site</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
         <header>
