--- a/HTML/GridTemplateProject.html
+++ b/HTML/GridTemplateProject.html
@@ -6,7 +6,15 @@
     </head>
     <body>
         <div class="containerGrid">
-            <div class="itemA"></div>
+            <div class="itemA">
+                <div class="itemAA"></div>
+                <div class="itemABContainer">
+                    <div class="itemABA"><a href="../index.html">Home</a></div>
+                    <div class="itemABB"><a href="About.html">About</a></div>
+                    <div class="itemABC"><a href="Projects.html">Projects</a></div>
+                    <div class="itemABD"><a href="ContactMe.html">Contact Me</a></div>
+                </div>
+            </div>
             <div class="itemB"></div>
             <div class="itemC"></div>
             <div class="itemD"></div>
