Progress on Grid Template Project

--- a/HTML/GridTemplateProject.html
+++ b/HTML/GridTemplateProject.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div class="containerGrid">
-            <div class="itemA">
-                <div class="itemAA"></div>
+            <div class="itemAContainer">
+                <div class="itemAA">Grid Template Project</div>
                 <div class="itemABContainer">
                     <div class="itemABA"><a href="../index.html">Home</a></div>
                     <div class="itemABB"><a href="About.html">About</a></div>
@@ -15,22 +15,37 @@
                     <div class="itemABD"><a href="ContactMe.html">Contact Me</a></div>
                 </div>
             </div>
-            <div class="itemB"></div>
-            <div class="itemC"></div>
-            <div class="itemD"></div>
-            <div class="itemE"></div>
+            <div class="itemBContainer">
+                <div class="itemBA">Alex Ovechkin</div>
+            </div>
+            <div class="itemCContainer">
+                <div class="itemCA">Martin St. Louis</div>
+            </div>
+            <div class="itemDContainer">
+                <div class="itemDA">Patrick Kane</div>
+            </div>
+            <div class="itemEContainer">
+                <div class="itemEA">Tim Thomas</div>
+            </div>
             <div class="itemF"></div>
             <div class="itemGContainer">
-                <div class="itemGA"></div>
-                <div class="itemGB"></div>
+                <div class="itemGA">Firework Themed Gender Reveal Party Goes Wrong</div>
+                <div class="itemGBContainer">
+                    <div class="itemGBA"></div>
+                    <div class="itemGBB">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras purus libero, fermentum quis venenatis at, efficitur ut nisi. Integer non eleifend diam. Fusce ullamcorper maximus sem ac sodales. Vestibulum tincidunt ligula tincidunt pharetra vulputate. Donec viverra scelerisque libero quis dictum.</div>
+                </div>
             </div>
             <div class="itemHContainer">
-                <div class="itemHA"></div>
-                <div class="itemHB"></div>
+                <div class="itemHA">Local Man Puts Phone Down, Goes Outside</div>
+                <div class="itemHBContainer">
+                    <div class="itemHBA"></div>
+                </div>
             </div>
             <div class="itemIContainer">
-                <div class="itemIA"></div>
-                <div class="itemIB"></div>
+                <div class="itemIA">Benevolent Government Discovers Citizen Without Mask</div>
+                <div class="itemIBContainer">
+                    <div class="itemIBA"></div>
+                </div>
             </div>
             <div class="itemJContainer">
                 <div class="itemJA"></div>
