Change color button

--- a/HTML/GridTemplateProject.html
+++ b/HTML/GridTemplateProject.html
@@ -3,6 +3,7 @@
     <head>
         <title>Grid Template Project</title>
         <link rel="stylesheet" href="../CSS/GridTemplateProject.css">
+        <script type="text/javascript" src="../js/GridTemplateProject.js" defer></script>
     </head>
     <body>
         <div class="containerGrid">
@@ -12,7 +13,7 @@
                     <div class="itemABA"><a href="../index.html">Home</a></div>
                     <div class="itemABB"><a href="About.html">About</a></div>
                     <div class="itemABC"><a href="Projects.html">Projects</a></div>
-                    <div class="itemABD"><a href="ContactMe.html">Contact Me</a></div>
+                    <div class="itemABD"><a href="ContactMe.html">Contact</a></div>
                 </div>
             </div>
             <div class="itemBContainer">
@@ -27,9 +28,13 @@
             <div class="itemEContainer">
                 <div class="itemEA">Tim Thomas</div>
             </div>
-            <div class="itemF"></div>
+            <div class="itemFContainer" id="backgroundItemF">
+                <div class="itemFA">
+                    <button type="button" id="changeColorButton" class="changeColorButton">Change the Color</button>
+                </div>
+            </div>
             <div class="itemGContainer">
-                <div class="itemGA">Firework Themed Gender Reveal Party Goes Wrong</div>
+                <div class="itemGA">Firework Themed Gender Reveal Party Takes Expected Turn for Worse</div>
                 <div class="itemGBContainer">
                     <div class="itemGBA"></div>
                     <div class="itemGBB">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras purus libero, fermentum quis venenatis at, efficitur ut nisi. Integer non eleifend diam. Fusce ullamcorper maximus sem ac sodales. Vestibulum tincidunt ligula tincidunt pharetra vulputate. Donec viverra scelerisque libero quis dictum.</div>
@@ -39,12 +44,14 @@
                 <div class="itemHA">Local Man Puts Phone Down, Goes Outside</div>
                 <div class="itemHBContainer">
                     <div class="itemHBA"></div>
+                    <div class="itemHBB">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras purus libero, fermentum quis venenatis at, efficitur ut nisi. Integer non eleifend diam. Fusce ullamcorper maximus sem ac sodales. Vestibulum tincidunt ligula tincidunt pharetra vulputate. Donec viverra scelerisque libero quis dictum.</div>
                 </div>
             </div>
             <div class="itemIContainer">
                 <div class="itemIA">Benevolent Government Discovers Citizen Without Mask</div>
                 <div class="itemIBContainer">
                     <div class="itemIBA"></div>
+                    <div class="itemIBB">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras purus libero, fermentum quis venenatis at, efficitur ut nisi. Integer non eleifend diam. Fusce ullamcorper maximus sem ac sodales. Vestibulum tincidunt ligula tincidunt pharetra vulputate. Donec viverra scelerisque libero quis dictum.</div>
                 </div>
             </div>
             <div class="itemJContainer">
