initial mobile layout without menu function

--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -19,6 +19,10 @@
         <p>
             This is my first Javascript project. I have used basic HTML forms to create an interactive Mad Lib.
         </p>
+        <h1><a href="GridTemplateProject.html">Grid Template Project</a></h1>
+        <p>
+            My first stab at CSS Grid. I have a few media queries too so this page should resize depending on the size of your browser.
+        </p>
         
     </body>
     <footer>
