--- a/HTML/GridTemplateProject.html
+++ b/HTML/GridTemplateProject.html
@@ -3,7 +3,7 @@
     <head>
         <title>Grid Template Project</title>
         <link rel="stylesheet" href="../CSS/GridTemplateProject.css">
-        <script type="text/javascript" src="../js/GridTemplateProject.js" defer></script>
+        <script type="text/javascript" src="../JS/GridTemplateProject.js" defer></script>
     </head>
     <body>
         <div class="containerGrid">
