--- a/HTML/GridTemplateProject.html
+++ b/HTML/GridTemplateProject.html
@@ -4,6 +4,7 @@
         <title>Grid Template Project</title>
         <link rel="stylesheet" href="../CSS/GridTemplateProject.css">
         <script type="text/javascript" src="../JS/GridTemplateProject.js" defer></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="containerGrid">
