added mobile menu button

--- a/HTML/GridTemplateProject.html
+++ b/HTML/GridTemplateProject.html
@@ -7,55 +7,58 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="containerGrid">
-            <div class="itemAContainer">
+        <div class="containerGrid" id="containerGrid">
+            <div class="itemAContainer" id="itemAContainer">
                 <div class="itemAA">Grid Template Project</div>
-                <div class="itemABContainer">
-                    <div class="itemABA"><a href="../index.html">Home</a></div>
-                    <div class="itemABB"><a href="About.html">About</a></div>
-                    <div class="itemABC"><a href="Projects.html">Projects</a></div>
-                    <div class="itemABD"><a href="ContactMe.html">Contact</a></div>
+                <div class="itemABContainer" id="itemABContainer">
+                    <div class="itemABA" id="itemABA"><a href="../index.html">Home</a></div>
+                    <div class="itemABB" id="itemABB"><a href="About.html">About</a></div>
+                    <div class="itemABC" id= "itemABC"><a href="Projects.html">Projects</a></div>
+                    <div class="itemABD" id= "itemABD"><a href="ContactMe.html">Contact</a></div>
+                </div>
+                <div class="itemAC">
+                    <img class="menuButton" src="../Assets/menubutton.png" alt="menu button" id="menuButton">
                 </div>
             </div>
-            <div class="itemBContainer">
+            <div class="itemBContainer" id="itemBContainer">
                 <div class="itemBA">Alex Ovechkin</div>
             </div>
-            <div class="itemCContainer">
+            <div class="itemCContainer" id="itemCContainer">
                 <div class="itemCA">Martin St. Louis</div>
             </div>
-            <div class="itemDContainer">
+            <div class="itemDContainer" id="itemDContainer">
                 <div class="itemDA">Patrick Kane</div>
             </div>
-            <div class="itemEContainer">
+            <div class="itemEContainer" id="itemEContainer">
                 <div class="itemEA">Tim Thomas</div>
             </div>
-            <div class="itemFContainer" id="backgroundItemF">
+            <div class="itemFContainer" id="itemFContainer">
                 <div class="itemFA">
                     <button type="button" id="changeColorButton" class="changeColorButton">Change the Color</button>
                 </div>
             </div>
-            <div class="itemGContainer">
+            <div class="itemGContainer" id="itemGContainer">
                 <div class="itemGA">Firework Themed Gender Reveal Party Takes Expected Turn for Worse</div>
                 <div class="itemGBContainer">
                     <div class="itemGBA"></div>
                     <div class="itemGBB">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras purus libero, fermentum quis venenatis at, efficitur ut nisi. Integer non eleifend diam. Fusce ullamcorper maximus sem ac sodales. Vestibulum tincidunt ligula tincidunt pharetra vulputate. Donec viverra scelerisque libero quis dictum.</div>
                 </div>
             </div>
-            <div class="itemHContainer">
+            <div class="itemHContainer" id="itemHContainer">
                 <div class="itemHA">Local Man Puts Phone Down, Goes Outside</div>
                 <div class="itemHBContainer">
                     <div class="itemHBA"></div>
                     <div class="itemHBB">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras purus libero, fermentum quis venenatis at, efficitur ut nisi. Integer non eleifend diam. Fusce ullamcorper maximus sem ac sodales. Vestibulum tincidunt ligula tincidunt pharetra vulputate. Donec viverra scelerisque libero quis dictum.</div>
                 </div>
             </div>
-            <div class="itemIContainer">
+            <div class="itemIContainer" id="itemIContainer">
                 <div class="itemIA">Benevolent Government Discovers Citizen Without Mask</div>
                 <div class="itemIBContainer">
                     <div class="itemIBA"></div>
                     <div class="itemIBB">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras purus libero, fermentum quis venenatis at, efficitur ut nisi. Integer non eleifend diam. Fusce ullamcorper maximus sem ac sodales. Vestibulum tincidunt ligula tincidunt pharetra vulputate. Donec viverra scelerisque libero quis dictum.</div>
                 </div>
             </div>
-            <div class="itemJContainer">
+            <div class="itemJContainer" id="itemJContainer">
                 <div class="itemJA" id="itemJA">
                     <p>Tell me what you think of the website!</p>
                     <form action="#itemJA" onsubmit="changeDisplay(); return false">
