first draft Yelp API project

--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -23,6 +23,10 @@
         <p>
             My first stab at CSS Grid. I have a few media queries too so this page should resize depending on the size of your browser.
         </p>
+        <h1><a href="YelpAPIProject.html">Yelp API Project</a></h1>
+        <p>
+            This is my first attempt at integrating an external API onto a web page. This tool searches for restuarants in your city.
+        </p>
         
     </body>
     <footer>
