--- a/HTML/YelpAPIProject.html
+++ b/HTML/YelpAPIProject.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Example</title>
-        <link rel="stylesheet" href="">
-        <script type="text/javascript" src="" ></script>
+        <title>Yelp API Project</title>
+        <link rel="stylesheet" href="../CSS/YelpAPIProject.css">
+        <script type="text/javascript" src="../JS/YelpAPIProject.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="containerGrid" id="containerGrid">
             <div class="itemAContainer" id="itemAContainer">
-                <div class="itemAA">Title</div>
+                <div class="itemAA">Yelp API Project</div>
                 <div class="itemABContainer" id="itemABContainer">
                     <div class="itemABA" id="itemABA"><a href="../index.html">Home</a></div>
                     <div class="itemABB" id="itemABB"><a href="About.html">About</a></div>
@@ -19,6 +19,20 @@
                 <div class="itemAC">
                     <img class="menuButton" src="../Assets/menubutton.png" alt="menu button" id="menuButton">
                 </div>
+            </div>
+            <div class="itemBContainer" id="itemBContainer">
+                <img src="../Assets/Yelp_Logo.svg.png" alt="Yelp Logo" class="yelpLogo">
+            </div>
+            <div class="itemCContainer" id="itemCContainer">
+            <form> 
+                <label for="term">Find</label>
+                <input id="term" type="text" name="term" required>
+                <br>
+                <label for="location">City</label>
+                <input id="location" type="text" name="location" required>
+                <br>
+                <input type="submit" id="submit" value="Submit">
+            </form>
             </div>
         </body>
     <footer>
