fixed Project page link

--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -23,9 +23,9 @@
         <p>
             My first stab at CSS Grid. I have a few media queries too so this page should resize depending on the size of your browser.
         </p>
-        <h1><a href="YelpAPIProject.html">Yelp API Project</a></h1>
+        <h1><a href="OpenWeatherAPIProject.html">Open Weather API Project</a></h1>
         <p>
-            This is my first attempt at integrating an external API onto a web page. This tool searches for restuarants in your city.
+            This is my first attempt at integrating an external API onto a web page. This tool searches for current weather in any US city.
         </p>
         
     </body>
