--- a/HTML/OpenWeatherAPIProject.html
+++ b/HTML/OpenWeatherAPIProject.html
@@ -89,7 +89,7 @@
             </div>
         <div id="itemDContainer" class="itemDContainer">
             <div id="itemDA" class="itemDA">
-                <p id="location">Portland, Maine</p>
+                <p id="place">Portland, Maine</p>
 
             </div>
             <div id="itemDB" class="itemDB">
