display info from API

--- a/HTML/OpenWeatherAPIProject.html
+++ b/HTML/OpenWeatherAPIProject.html
@@ -99,7 +99,7 @@
                 <br>
                 <p id="humidity">Humidity: 100%</p>
                 <br>
-                <p id="weather">Weather: Clear Skies</p>
+                <p id="weather1">Weather: Clear Skies</p>
                 
             </div>
             <div id="itemDC" class="itemDC">
