Starting to beautify whole site

--- a/HTML/templatePage.html
+++ b/HTML/templatePage.html
@@ -20,7 +20,8 @@
                     <img class="menuButton" src="../Assets/menubutton.png" alt="menu button" id="menuButton">
                 </div>
             </div>
-        </body>
+        </div>
+    </body>
     <footer>
 
     </footer>
