--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Coxn1446's Site</title>
-        <link rel="stylesheet" href="CSS/style.css">
+        <title>Coxn's Homepage</title>
+        <link rel="stylesheet" href="CSS/Homepage.css">
+        <script type="text/javascript" src="JS/Homepage.js" defer></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
-                  <li class ="homeNavigation"><a href="index.html">Home</a></li>
-                  <li><a href="HTML/ContactMe.html">Contact Me</a></li>
-                  <li><a href="HTML/Projects.html">Projects</a></li>
-                  <li><a href="HTML/About.html">About</a></li>
-                </ul>
-            </nav>
-        </header>
-        <section class = "homepageHeroImage">
-            <div class = "homepageQuote">
-                <p class = "homepageQuoteText">
-                   "With a payoff of something like 100 million to 1! Even if the odds of succeeding to this degree are slim are they really 100 million to one against? Something to think about..." 
-                </p>
+        <div class="containerGrid" id="containerGrid">
+            <div class="itemAContainer" id="itemAContainer">
+                <div class="itemAA">Coxn's Site</div>
+                <div class="itemABContainer" id="itemABContainer">
+                    <div class="itemABA" id="itemABA"><a href="index.html">Home</a></div>
+                    <div class="itemABB" id="itemABB"><a href="HTML/About.html">About</a></div>
+                    <div class="itemABC" id= "itemABC"><a href="HTML/Projects.html">Projects</a></div>
+                    <div class="itemABD" id= "itemABD"><a href="HTML/ContactMe.html">Contact</a></div>
+                </div>
+                <div class="itemAC">
+                    <img class="menuButton" src="Assets/menubutton.png" alt="menu button" id="menuButton">
+                </div>
             </div>
-
-        </section>
-        
-    </body>
+            <div class="itemBContainer" id="itemBContainer">
+                <div class="itemBA" id="itemBA">
+                </div>
+                <div class="itemBBContainer" id="itemBBContainer">
+                     <p class="hal">
+                        "With a payoff of something like 100 million to 1! Even if the odds of succeeding to this degree are slim are they really 100 million to one against? Something to think about..."
+                    </p>
+                </div>
+            </div>
+        </div>
+        </body>
     <footer>
 
     </footer>
