--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -17,15 +17,15 @@
         </header>
         <h1><a href="MixedMessages.html">Mixed Messages</a></h1>
         <p>
-            This is my first Javascript project. I have used basic HTML forms to create an interactive Mad Lib.
+            I have used basic HTML forms to create an interactive Mad Lib.
         </p>
         <h1><a href="GridTemplateProject.html">Grid Template Project</a></h1>
         <p>
-            My first stab at CSS Grid. I have a few media queries too so this page should resize depending on the size of your browser.
+            Used CSS Grid to create a better web page layout. I have a few media queries too so this page should resize depending on the size of your browser.
         </p>
         <h1><a href="OpenWeatherAPIProject.html">Open Weather API Project</a></h1>
         <p>
-            This is my first attempt at integrating an external API onto a web page. This tool searches for current weather in any US city.
+            Called a 3rd party API and displayed its info on a webpage. This tool searches for current weather in any US city.
         </p>
         
     </body>
