seperation of needs, beautify

--- a/HTML/OpenWeatherAPIProject.html
+++ b/HTML/OpenWeatherAPIProject.html
@@ -3,6 +3,7 @@
     <head>
         <title>Open Weather API Project</title>
         <link rel="stylesheet" href="../CSS/OpenWeatherAPIProject.css">
+        <link rel="stylesheet" href="../CSS/templateCSS.css">
         <script type="text/javascript" src="../JS/OpenWeatherAPIProject.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
