--- a/HTML/templatePage.html
+++ b/HTML/templatePage.html
@@ -3,7 +3,7 @@
     <head>
         <title>Example</title>
         <link rel="stylesheet" href="">
-        <script type="text/javascript" src="" ></script>
+        <script type="text/javascript" src="" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
