--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Coxn's Homepage</title>
         <link rel="stylesheet" href="CSS/Homepage.css">
+        <link rel="stylesheet" href="CSS/templateCSS.css">
         <script type="text/javascript" src="JS/Homepage.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -31,7 +32,4 @@
             </div>
         </div>
         </body>
-    <footer>
-
-    </footer>
 </html>
