seperation of needs, menuClick.js

--- a/HTML/About.html
+++ b/HTML/About.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Coxn1446's Site</title>
-        <link rel="stylesheet" href="../CSS/style.css">
+        <title>About Coxn</title>
+        <link rel="stylesheet" href="../CSS/templateCSS.css">
+        <link rel="stylesheet" href="../CSS/About.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <li class ="homeNavigation"><a href="../index.html">Home</a></li>
-                    <li><a href="ContactMe.html">Contact Me</a></li>
-                    <li><a href="Projects.html">Projects</a></li>
-                    <li><a href="About.html">About</a></li>
-                  </ul>
-            </nav>
-        </header>
-        
+        <div class="containerGrid" id="containerGrid">
+            <div class="itemAContainer" id="itemAContainer">
+                <div class="itemAA">About Coxn</div>
+                <div class="itemABContainer" id="itemABContainer">
+                    <div class="itemABA" id="itemABA"><a href="../index.html">Home</a></div>
+                    <div class="itemABB" id="itemABB"><a href="About.html">About</a></div>
+                    <div class="itemABC" id= "itemABC"><a href="Projects.html">Projects</a></div>
+                    <div class="itemABD" id= "itemABD"><a href="ContactMe.html">Contact</a></div>
+                </div>
+                <div class="itemAC">
+                    <img class="menuButton" src="../Assets/menubutton.png" alt="menu button" id="menuButton">
+                </div>
+                <script type="text/javascript" src="../JS/menuClick.js"></script>
+            </div>
+            <div class="itemBContainer" id="itemBContainer">
+                <div class="itemBA" id="itemBA"></div>
+                <div class="itemBB" id="itemBB"></div>
+                <div class="itemBC" id="itemBAC"></div>
+
+            </div>
+            <div class="itemCContainer" id="itemCContainer">
+                <div class="itemCA" id="itemCA"></div>
+                <div class="itemCB" id="itemCB"></div>   
+            </div>
+            <div class="itemDContainer" id="itemDContainer">
+                
+            </div>
+        </div>
     </body>
     <footer>
 
