--- a/HTML/templatePage.html
+++ b/HTML/templatePage.html
@@ -3,6 +3,7 @@
     <head>
         <title>Example</title>
         <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="../CSS/templateCSS.css">
         <script type="text/javascript" src="" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -19,6 +20,7 @@
                 <div class="itemAC">
                     <img class="menuButton" src="../Assets/menubutton.png" alt="menu button" id="menuButton">
                 </div>
+                <script type="text/javascript" src="../JS/menuClick.js"></script>
             </div>
         </div>
     </body>
