--- a/HTML/OpenWeatherAPIProject.html
+++ b/HTML/OpenWeatherAPIProject.html
@@ -20,6 +20,7 @@
                 <div class="itemAC">
                     <img class="menuButton" src="../Assets/menubutton.png" alt="menu button" id="menuButton">
                 </div>
+                <script type="text/javascript" src="../JS/menuClick.js"></script>
             </div>
             <div class="itemBContainer" id="itemBContainer">
                 <a href="https://openweathermap.org/"><img src="../Assets/OpenWeather-Logo.jpeg" class="OpenWeatherLogo"></a>
