--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -4,7 +4,6 @@
         <title>Coxn1446's Projects</title>
         <link rel="stylesheet" href="../CSS/Projects.css">
         <link rel="stylesheet" href="../CSS/templateCSS.css">
-        <script type="text/javascript" src="../JS/Projects.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -20,6 +19,7 @@
                 <div class="itemAC">
                     <img class="menuButton" src="../Assets/menubutton.png" alt="menu button" id="menuButton">
                 </div>
+                <script type="text/javascript" src="../JS/menuClick.js"></script>
             </div>
             <div class="itemBContainer" id="itemBContainer">
                 <br>
