--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title>Coxn's Homepage</title>
         <link rel="stylesheet" href="CSS/Homepage.css">
         <link rel="stylesheet" href="CSS/templateCSS.css">
-        <script type="text/javascript" src="JS/Homepage.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -20,6 +19,7 @@
                 <div class="itemAC">
                     <img class="menuButton" src="Assets/menubutton.png" alt="menu button" id="menuButton">
                 </div>
+                <script type="text/javascript" src="JS/menuClick.js"></script>
             </div>
             <div class="itemBContainer" id="itemBContainer">
                 <div class="itemBA" id="itemBA">
