yassification final edits

--- a/HTML/MixedMessages.html
+++ b/HTML/MixedMessages.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="../CSS/templateCSS.css">
         <link rel="stylesheet" href="../CSS/mixedMessages.css">
         <script type="text/javascript" src="../JS/Mixed-Messages.js" defer></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="containerGrid" id="containerGrid">
